# asha-poc

./: .clang-tidy  .gitignore  Makefile  README.md  meson.build
dev/: README.md  sample.g722
include/: bluez.h  dbus.h  log.h  loop.h  streaming.h  types.h
packet-dumps/asha-support-resound/: wireshark-log.pcapng
packet-dumps/asha-support-rsl10-20mssleep-log-until-disconnect/: dump.pcapng
packet-dumps/asha-support-rsl10-no-sleep/: wireshark.pcapng
packet-dumps/asha-support-rsl10-test/: README.md  wireshark-output.pcapng
packet-dumps/asha-support-rsl10-ticker-based-sleep/: wireshark.pcapng
packet-dumps/youtube-android-rsl10/: README.md
sounds/: ikea.g722
src/: asha_support.c  bluez.c  dbus.c  device_manager.c  loop.c  streaming.c  types.h
